--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ spigot {
     apiVersion = project.property("apiVersion")
     load = STARTUP
     //    depends = ['']
+    softDepends = ['art-framework']
 }
 
 compileJava {
@@ -97,7 +98,6 @@ shadowJar {
     }
     relocate 'co.aikar.commands', "shadow.${pluginName}.acf"
     relocate 'co.aikar.locales', "shadow.${pluginName}.locales"
-    relocate 'de.exlll.configlib', "shadow.${pluginName}.configlib"
     relocate 'net.kyori', "shadow.${pluginName}.text"
 }
 
